--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,9 @@
+#############################
+# Pre project configuration #
+#############################
+# Control MSVC flags using CMake abstraction variables
+cmake_policy(SET CMP0091 NEW)
+
 #################
 # Project setup #
 #################
@@ -7,6 +13,7 @@ project(rucksack C)
 #####################
 # Set CMake options #
 #####################
+set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_STANDARD_REQUIRED True)
 
