--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,9 +28,9 @@ jobs:
       - name: Collect outputs
         shell: bash
         run: |
-          mkdir outputs
-          cp cmake-build-release/packer/rucksack-packer outputs/
-          cp cmake-build-release/unpacker/rucksack-unpacker outputs/
+          mkdir -p outputs/${{ matrix.os }}
+          cp cmake-build-release/packer/rucksack-packer outputs/${{ matrix.os }}
+          cp cmake-build-release/unpacker/rucksack-unpacker outputs/${{ matrix.os }}
       - name: Upload outputs
         uses: actions/upload-artifact@v2
         with:
@@ -63,9 +63,9 @@ jobs:
       - name: Collect outputs
         shell: bash
         run: |
-          mkdir outputs
-          cp cmake-build-release/packer/Release/rucksack-packer.exe outputs/
-          cp cmake-build-release/unpacker/Release/rucksack-unpacker.exe outputs/
+          mkdir -p outputs/${{ matrix.os }}
+          cp cmake-build-release/packer/Release/rucksack-packer.exe outputs/${{ matrix.os }}
+          cp cmake-build-release/unpacker/Release/rucksack-unpacker.exe outputs/${{ matrix.os }}
       - name: Upload outputs
         uses: actions/upload-artifact@v2
         with:
